@@ -17,52 +17,49 @@
 package com.echothree.control.user.term.server.command;
 
 import com.echothree.control.user.term.common.form.CreateTermTypeForm;
-import com.echothree.model.control.term.server.control.TermControl;
-import com.echothree.model.data.term.server.entity.TermType;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.term.server.logic.TermTypeLogic;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
 import java.util.List;
 
 public class CreateTermTypeCommand
         extends BaseSimpleCommand<CreateTermTypeForm> {
-    
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null)
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("TermTypeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("IsDefault", FieldType.BOOLEAN, true, null, null),
                 new FieldDefinition("SortOrder", FieldType.SIGNED_INTEGER, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of CreateTermTypeCommand */
     public CreateTermTypeCommand(UserVisitPK userVisitPK, CreateTermTypeForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, false);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, false);
     }
     
     @Override
     protected BaseResult execute() {
-        var termControl = Session.getModelController(TermControl.class);
-        String termTypeName = form.getTermTypeName();
-        TermType termType = termControl.getTermTypeByName(termTypeName);
-        
-        if(termType == null) {
-            var isDefault = Boolean.valueOf(form.getIsDefault());
-            var sortOrder = Integer.valueOf(form.getSortOrder());
-            
-            termControl.createTermType(termTypeName, isDefault, sortOrder);
-        } else {
-            addExecutionError(ExecutionErrors.DuplicateTermTypeName.name(), termTypeName);
-        }
-        
+        var termTypeName = form.getTermTypeName();
+        var isDefault = Boolean.valueOf(form.getIsDefault());
+        var sortOrder = Integer.valueOf(form.getSortOrder());
+
+        TermTypeLogic.getInstance().createTermType(this, termTypeName, isDefault, sortOrder, null,
+                null, getPartyPK());
+
         return null;
     }
     
